Fixed syntax issue

--- a/Lab 1.2/lab1.2.html
+++ b/Lab 1.2/lab1.2.html
@@ -30,7 +30,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <img class="image" id="0" src="res/2019.png" alt="depiction of statistics for pet ownership for 2019">
+                            <img class="image" id="0" src="res/2019.png" alt="Statistics for Australian pet ownership for 2019">
                         </td>
                     </tr>
                 </tbody>
