Included requirements from lab 1.3 handout (plus dog)

--- a/Lab 1.3/lab1.3.html
+++ b/Lab 1.3/lab1.3.html
@@ -15,13 +15,13 @@
             <h3>Example of creating and drawing an SVG:</h3>
             <h4>Pet Ownership in 2023:</h4>
             <svg width="1500" height="500">
-                <rect x="100" y="100" width="100" height="400"></rect>
-                <rect x="250" y="150" width="100" height="400"></rect>
-                <rect x="400" y="180" width="100" height="400"></rect>
-                <rect x="550" y="200" width="100" height="400"></rect>
-                <rect x="700" y="300" width="100" height="400"></rect>
-                <rect x="850" y="400" width="100" height="400"></rect>
-                <rect x="1000" y="450" width="100" height="400"></rect>
+                <rect class="dogs" x="100" y="100" width="100" height="400"></rect>
+                <rect class="cats" x="250" y="150" width="100" height="400"></rect>
+                <rect class="fish" x="400" y="180" width="100" height="400"></rect>
+                <rect class="birds" x="550" y="200" width="100" height="400"></rect>
+                <rect class="small-mammals" x="700" y="300" width="100" height="400"></rect>
+                <rect class="reptiles" x="850" y="400" width="100" height="400"></rect>
+                <rect class="other" x="1000" y="450" width="100" height="400"></rect>
             </svg>
         </div>
         <footer>Authored by Jonathan Frances | <a href="mailto:103426340@student.swin.edu.au">103426340@student.swin.edu.au</a></footer>
