testing adding a sidebar menu

--- a/Lab 1.3/lab1.3.html
+++ b/Lab 1.3/lab1.3.html
@@ -15,7 +15,7 @@
             <h3>Example of creating and drawing an SVG:</h3>
             <h4>Pet Ownership in 2023:</h4>
             <svg width="1500" height="500">
-                <rect class="dogs" x="100" y="100" width="100" height="400"></rect>
+                <rect class="rect dogs" x="100" y="100" width="100" height="400"></rect>
                 <rect class="cats" x="250" y="150" width="100" height="400"></rect>
                 <rect class="fish" x="400" y="180" width="100" height="400"></rect>
                 <rect class="birds" x="550" y="200" width="100" height="400"></rect>
