Update meta data, mistakes

--- a/Lab 1.1/lab1.1.html
+++ b/Lab 1.1/lab1.1.html
@@ -1,6 +1,9 @@
 <html lang="en">
     <head>
         <title>Lab 1.1 HTML Review</title>
+        <meta name="author" content="Jonathan Frances">
+        <meta name="keywords" content="HTML, CSS">
+        <meta name="description" content="lab task 1.1">
         <meta charset="utf-8">
         <meta name="author" content="Jonathan Frances">
         <meta name="keywords" content="HTML, CSS">
