--- a/Lab 1.3/lab1.3.html
+++ b/Lab 1.3/lab1.3.html
@@ -1,6 +1,9 @@
 <html>
     <head>
         <title>Lab 1.3 Drawing SVGs</title>
+        <meta name="author" content="Jonathan Frances">
+        <meta name="keywords" content="HTML, CSS">
+        <meta name="description" content="lab task 1.3">
         <link rel="stylesheet" href="lab1.3.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
