--- a/Lab 2.2/lab2.2.html
+++ b/Lab 2.2/lab2.2.html
@@ -3,8 +3,8 @@
     <head>
         <meta name="author" content="Jonathan Frances">
         <meta name="keywords" content="HTML, CSS">
-        <meta name="description" content="lab task 1.1">
-        <title>Task 2.1 D3 Data Binding</title>
+        <meta name="description" content="lab task 2.2">
+        <title>Task 2.2 D3 Drawing with Data - Bar Chart</title>
         <link rel="stylesheet" href="lab2.2.css">
         <script src="https://d3js.org/d3.v7.min.js"></script>
     </head>
