--- a/Lab 1.2/lab1.2.html
+++ b/Lab 1.2/lab1.2.html
@@ -1,6 +1,9 @@
 <html>
     <head>
-        <title>Lab 1.2 HTML Review</title>
+        <title>Lab 1.2 Javascript Review</title>
+        <meta name="author" content="Jonathan Frances">
+        <meta name="keywords" content="HTML, CSS">
+        <meta name="description" content="lab task 1.2">
         <link rel="stylesheet" href="lab1.2.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
