--- a/Lab 2.2/lab2.2.html
+++ b/Lab 2.2/lab2.2.html
@@ -41,5 +41,6 @@
                 })
                 .style("fill", d3.color("yellowgreen"));
         </script>
+        <footer>Authored by Jonathan Frances | <a href="mailto:103426340@student.swin.edu.au">103426340@student.swin.edu.au</a></footer>
     </body>
 </html>
