--- a/Lab 2.4/lab2.4.html
+++ b/Lab 2.4/lab2.4.html
@@ -11,10 +11,33 @@
     <body>
         <h1>D3 Loading Data from CSV</h1>
         <script>
+            var w = 500;
+            var h = 100;
+
+            var svg = d3.select("body")
+                    .data(dataset)
+                    .append("svg")
+                    .attr("width", w)
+                    .attr("height", h)
+                    .style("outline", "solid thin skyblue");
+
             d3.csv("res/Task_2.4_data.csv").then(function(data){
                 console.log(data);
                 wombatSightings = data;
             })
+
+            function barChart(){
+                svg.selectAll("rect")
+                    .data(wombatSightings)
+                    .enter()
+                    .append("rect")
+                    .attr("x", function(d, i){
+                        return i * (w / wombatSightings.length);
+                    })
+                    .attr("y", function(d){
+                        return h - (d.wombats * 4)
+                    });
+            }
         </script>
         <footer>Authored by Jonathan Frances | <a href="mailto:103426340@student.swin.edu.au">103426340@student.swin.edu.au</a></footer>
     </body>
