--- a/Lab 2.4/lab2.4.html
+++ b/Lab 2.4/lab2.4.html
@@ -13,6 +13,7 @@
         <script>
             var w = 500;
             var h = 100;
+            var wombatSightings;
 
             d3.csv("res/Task_2.4_data.csv").then(function(data){
                 console.log(data);
@@ -20,7 +21,7 @@
             });
 
             var svg = d3.select("body")
-                    .data(dataset)
+                    .data(wombatSightings)
                     .append("svg")
                     .attr("width", w)
                     .attr("height", h)
