--- a/Lab 2.4/lab2.4.html
+++ b/Lab 2.4/lab2.4.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="utf-8">
         <meta name="author" content="Jonathan Frances">
         <meta name="keywords" content="HTML, CSS">
         <meta name="description" content="lab task 2.4">
         <title>Task 2.4 D3 Loading Data from CSV</title>
         <link rel="stylesheet" href="lab2.4.css">
-        <script src="https://d3js.org/d3.v7.min.js"></script>
+        <script src="../d3.js/d3.v7.min.js.js"></script>
     </head>
     <body>
         <h1>D3 Loading Data from CSV</h1>
