--- a/Lab 2.4/lab2.4.html
+++ b/Lab 2.4/lab2.4.html
@@ -14,17 +14,7 @@
         <script>
             var w = 500;
             var h = 100;
-            var wombatSightings = d3.csv("res/Task_2.4_data.csv").then(function(data){
-                console.log(data);
-                return data;
-            });
-
-            var svg = d3.select("body")
-                    .append("svg")
-                    .attr("width", w)
-                    .attr("height", h)
-                    .style("outline", "solid thin skyblue");
-
+            
             function barChart(data){
                 svg.selectAll("rect")
                     .data(data)
@@ -36,11 +26,19 @@
                     .attr("y", function(d){
                         return h - (data.wombats * 4)
                     });
-            }
+            }           
 
-            console.log(wombatSightings);
-            barChart(wombatSightings);
+            d3.csv("res/Task_2.4_data.csv").then(function(data){
+                console.log(data);
+                wombatSightings = data;
+                barChart(wombatSightings);
+            });
 
+            var svg = d3.select("body")
+                    .append("svg")
+                    .attr("width", w)
+                    .attr("height", h)
+                    .style("outline", "solid thin skyblue");
         </script>
         <footer>Authored by Jonathan Frances | <a href="mailto:103426340@student.swin.edu.au">103426340@student.swin.edu.au</a></footer>
     </body>
