Include local d3.js reference

--- a/Lab 2.2/lab2.2.html
+++ b/Lab 2.2/lab2.2.html
@@ -6,7 +6,7 @@
         <meta name="description" content="lab task 2.2">
         <title>Task 2.2 D3 Drawing with Data - Bar Chart</title>
         <link rel="stylesheet" href="lab2.2.css">
-        <script src="https://d3js.org/d3.v7.min.js"></script>
+        <script src="../d3.js/d3.v7.min.js.js"></script>
     </head>
     <body>
         <h1>D3 Drawing with Data - Bar Chart</h1>
