--- a/Lab 2.3/lab2.3.html
+++ b/Lab 2.3/lab2.3.html
@@ -6,7 +6,7 @@
         <meta name="description" content="lab task 2.3">
         <title>Task 2.3 D3 Drawing with Data - Scatter Plot</title>
         <link rel="stylesheet" href="lab2.3.css">
-        <script src="https://d3js.org/d3.v7.min.js"></script>
+        <script src="../d3.js/d3.v7.min.js.js"></script>
     </head>
     <body>
         <h1>D3 Drawing with Data - Scatter Plot</h1>
