--- a/Lab 2.1/lab2.1.html
+++ b/Lab 2.1/lab2.1.html
@@ -6,7 +6,7 @@
         <meta name="description" content="lab task 2.1">
         <title>Task 2.1 D3 Data Binding</title>
         <link rel="stylesheet" href="lab2.1.css">
-        <script src="https://d3js.org/d3.v7.min.js"></script>
+        <script src="../d3.js/d3.v7.min.js.js"></script>
     </head>
     <body>
         <h1>D3 Data Binding</h1>
