--- a/Lab 2.4/lab2.4.html
+++ b/Lab 2.4/lab2.4.html
@@ -24,8 +24,7 @@
                         return i * (w / data.length);
                     })
                     .attr("y", function(d){
-                        console.log(data.wombats);
-                        return h - (data.wombats * 4);
+                        return h - (d.wombats * 4);
                     });
             }           
 
