--- a/Lab 2.4/lab2.4.html
+++ b/Lab 2.4/lab2.4.html
@@ -29,7 +29,7 @@
                     })
                     .attr("width", (w / data.length) - padding)
                     .attr("height", function(d){
-                        return d;
+                        return d[0].wombats;
                     });
             }           
 
