--- a/Lab 2.4/lab2.4.html
+++ b/Lab 2.4/lab2.4.html
@@ -29,7 +29,13 @@
                     })
                     .attr("width", (w / data.length) - padding)
                     .attr("height", function(d){
-                        return d[0].wombats;
+                        console.log(d.wombats);
+                        console.log(d);
+                        console.log(data);
+                        console.log(data.wombats);
+                        console.log(data[0]);
+                        console.log(data[0].wombats);
+                        return d.wombats;
                     });
             }           
 
