--- a/Lab 2.4/lab2.4.html
+++ b/Lab 2.4/lab2.4.html
@@ -7,44 +7,12 @@
         <meta name="description" content="lab task 2.4">
         <title>Task 2.4 D3 Loading Data from CSV</title>
         <link rel="stylesheet" href="lab2.4.css">
-        <script src="../d3.js/d3.v7.min.js.js"></script>
     </head>
     <body>
         <h1>D3 Loading Data from CSV</h1>
-        <script>
-            var w = 1000;
-            var h = 500;
-            var padding = 10;
-            
-            function barChart(data){
-                svg.selectAll("rect")
-                    .data(data)
-                    .enter()
-                    .append("rect")
-                    .attr("x", function(d, i){
-                        return i * (w / data.length);
-                    })
-                    .attr("y", function(d){
-                        return h - (d.wombats * 4);
-                    })
-                    .attr("width", (w / data.length) - padding)
-                    .attr("height", function(d){
-                        return d.wombats * 4;
-                    });
-            }           
-
-            d3.csv("res/Task_2.4_data.csv").then(function(data){
-                console.log(data);
-                wombatSightings = data;
-                barChart(wombatSightings);
-            });
-
-            var svg = d3.select("body")
-                    .append("svg")
-                    .attr("width", w)
-                    .attr("height", h)
-                    .style("outline", "solid thin skyblue");
-        </script>
+        <p id="chart"></p>
         <footer>Authored by Jonathan Frances | <a href="mailto:103426340@student.swin.edu.au">103426340@student.swin.edu.au</a></footer>
     </body>
+    <script src="../d3.js/d3.v7.min.js.js"></script>
+    <script src="lab2.4.js"></script>
 </html>
