--- a/Lab 1.1/menu_test/lab1.1(1).html
+++ b/Lab 1.1/menu_test/lab1.1(1).html
@@ -18,7 +18,7 @@
 	  <a href="#">Clients</a>
 	  <a href="#">Contact</a>
 	</div>
-    	<span class="menu" onclick="openNav()"><img src="res/menu.svg"></span>
+    	<span class="menu" onclick="openNav()"><img src="../res/menu.svg"></span>
         <div>
             <h1>Lab 1.1 HTML Review</h1>
             <h2>COS30045 Data Visualisation</h2>
