--- a/Lab 6.1/lab6.1.html
+++ b/Lab 6.1/lab6.1.html
@@ -4,13 +4,13 @@
         <meta name="author" content="Jonathan Frances">
         <meta name="keywords" content="HTML, CSS">
         <meta name="description" content="lab task 6.1">
-        <title>Task 6.1 D3 Interactivity</title>
+        <title>Task 6.1 D3 Interactivity - Mouseover</title>
         <link rel="stylesheet" href="lab6.1.css">
     </head>
     <body>
-        <h1>D3 Interactivity</h1>
-        <button onclick="addRandomValue('fast')">Add Value</button>
-        <button onclick="removeValue()">Remove Value</button>
+        <h1>D3 Interactivity - Mouseover</h1>
+        <button onclick="addRandomValue('fast')">Add</button>
+        <button onclick="removeValue()">Remove</button>
         <footer>Authored by Jonathan Frances | <a href="mailto:103426340@student.swin.edu.au">103426340@student.swin.edu.au</a></footer>
     </body>
     <script src="https://d3js.org/d3.v7.min.js"></script>
