--- a/Lab 7.1/lab7.1.html
+++ b/Lab 7.1/lab7.1.html
@@ -12,6 +12,6 @@
         <p id="chart"></p>
         <footer>Authored by Jonathan Frances | <a href="mailto:103426340@student.swin.edu.au">103426340@student.swin.edu.au</a></footer>
     </body>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="../d3.js/d3.v7.min.js.js"></script>
     <script src="lab7.1.js"></script>
 </html>
