Include menu side bar for all tasks

--- a/Lab 1.1/menu_test/lab1.1(1).html
+++ b/Lab 1.1/menu_test/lab1.1(1).html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Lab 1.1 HTML Review</title>
@@ -11,14 +12,14 @@
         <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&display=swap" rel="stylesheet">
     </head>
     <body>
-	<div id="mySidenav" class="sidenav">
+	<!-- <div id="mySidenav" class="sidenav">
 	  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+
 	  <a href="#">About</a>
 	  <a href="#">Services</a>
 	  <a href="#">Clients</a>
 	  <a href="#">Contact</a>
-	</div>
-    	<span class="menu" onclick="openNav()"><img src="../res/menu.svg"></span>
+	</div> -->
         <div>
             <h1>Lab 1.1 HTML Review</h1>
             <h2>COS30045 Data Visualisation</h2>
@@ -50,5 +51,6 @@
         </div>
         <footer>Authored by Jonathan Frances | <a href="mailto:103426340@student.swin.edu.au">103426340@student.swin.edu.au</a></footer>
     </body>
-    <script src="lab1.1(1).js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+    <script src="menu.js"></script>
 </html>
