--- a/Lab 1.3/lab1.3.html
+++ b/Lab 1.3/lab1.3.html
@@ -28,5 +28,8 @@
             </svg>
         </div>
         <footer>Authored by Jonathan Frances | <a href="mailto:103426340@student.swin.edu.au">103426340@student.swin.edu.au</a></footer>
-    </body>
+        <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+        <script src="../script/menu.js"></script>
+        <link rel="stylesheet" href="../script/menu.css">
+ </body>
 </html>
