--- a/Lab 7.1/lab7.1.html
+++ b/Lab 7.1/lab7.1.html
@@ -14,4 +14,7 @@
     </body>
     <script src="../d3.js/d3.v7.min.js.js"></script>
     <script src="lab7.1.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+    <script src="../script/menu.js"></script>
+    <link rel="stylesheet" href="../script/menu.css">
 </html>
