--- a/Lab 5.1/lab5.1.html
+++ b/Lab 5.1/lab5.1.html
@@ -14,4 +14,7 @@
     </body>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="lab5.1.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+    <script src="../script/menu.js"></script>
+    <link rel="stylesheet" href="../script/menu.css">
 </html>
