--- a/Lab 6.1/lab6.1.html
+++ b/Lab 6.1/lab6.1.html
@@ -15,4 +15,7 @@
     </body>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="lab6.1.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+    <script src="../script/menu.js"></script>
+    <link rel="stylesheet" href="../script/menu.css">
 </html>
