--- a/Lab 5.3/lab5.3.html
+++ b/Lab 5.3/lab5.3.html
@@ -9,8 +9,8 @@
     </head>
     <body>
         <h1>D3 Adding and Removing Data</h1>
-        <button onclick="addRandomValue('fast')">Add Value</button>
-        <button onclick="removeValue()">Remove Value</button>
+        <button onclick="addRandomValue('fast')">Add</button>
+        <button onclick="removeValue()">Remove</button>
         <footer>Authored by Jonathan Frances | <a href="mailto:103426340@student.swin.edu.au">103426340@student.swin.edu.au</a></footer>
     </body>
     <script src="https://d3js.org/d3.v7.min.js"></script>
